<resources>
    <string name="app_name">Just Java</string>
    <string name="toppings">Toppings</string>
    <string name="whipped_cream">Whipped cream</string>
    <string name="quantity">Quantity</string>
    <string name="minus">-</string>
    <string name="plus">+</string>
    <string name="order_summary">Order summary</string>
    <string name="order">Order</string>
    <string name="chocolate">Chocolate</string>
    <string name="name">Name</string>
    <string name="email_subject">JustJava order for %1$s</string>
    <string name="email_body">Name: %5$s\nAdd whipped cream? %3$s\nAdd chocolate? %4$s\nQuantity: %1$s\nTotal: $%2$s\nThank you!</string>
</resources>
