<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="16sp"
            android:layout_marginLeft="16sp"
            android:layout_marginEnd="16sp"
            android:layout_marginRight="16sp"
            android:orientation="vertical">

            <EditText
                android:id="@+id/name_edit_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/name"
                android:inputType="textCapSentences" />


            <TextView
                style="@style/HeaderTextStyle"
                android:text="@string/toppings"
                android:textColor="@android:color/black" />


            <CheckBox
                android:id="@+id/checkBoxWhippedCream"
                style="@style/text_standard"
                android:paddingStart="24dp"
                android:paddingLeft="24dp"
                android:paddingRight="24dp"
                android:text="@string/whipped_cream" />

            <CheckBox
                android:id="@+id/checkBoxChocolate"
                style="@style/text_standard"
                android:paddingStart="24dp"
                android:paddingLeft="24dp"
                android:paddingRight="24dp"
                android:text="@string/chocolate" />

            <TextView
                style="@style/HeaderTextStyle"
                android:text="@string/quantity"
                android:textColor="@android:color/black" />

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:orientation="horizontal">

                <Button
                    android:layout_width="48dp"
                    android:layout_height="48dp"
                    android:onClick="decrement"
                    android:text="@string/minus"
                    android:textAllCaps="true" />

                <TextView
                    android:id="@+id/quantity_text_view"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="8dp"
                    android:layout_marginRight="8dp"
                    tools:text="0" />

                <Button
                    android:layout_width="48dp"
                    android:layout_height="48dp"
                    android:onClick="increment"
                    android:text="@string/plus"
                    android:textAllCaps="true" />

            </LinearLayout>

            <TextView
                style="@style/HeaderTextStyle"
                android:text="@string/order_summary"
                android:textColor="@android:color/black" />

            <TextView
                android:id="@+id/order_summary_text_view"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp" />


            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:onClick="submitOrder"
                android:text="@string/order"
                android:textAllCaps="true" />


        </LinearLayout>
    </ScrollView>


</androidx.constraintlayout.widget.ConstraintLayout>